Use grid layout and read config from XML setup.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="pcSpeakers">PC Speakers</string>
     <string name="digitalOut">Digital Out</string>
     <string name="hdmi">HDMI</string>
+    <string name="reloadSetup">Reload Setup</string>
 
 </resources>
